Testing of CI/CD

--- a/ASP.NET Order Processing Application/Views/Home/Index.cshtml
+++ b/ASP.NET Order Processing Application/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="container-fluid col-6">
             <div class="input-group mb-3">
-                <span class="input-group-text" id="addon1">Order Amount $</span>
+                <span class="input-group-text" id="addon1">Order Amount</span>
                 @Html.TextBox("orderAmount", null, new { type = "number", @class = "form-control", placeholder = "Enter Order Amount", min = "0", step = "0.01", aria_label = "orderAmount", aria_describedby = "addon1" })
             </div>
             <div class="input-group mb-3">
